--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@ Use below html tag for RTL version
 -->
 <meta charset="utf-8">
 <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
-<title>MovNext | Front Desk</title>
+<title>MovHotel | Front Desk</title>
 <base href="/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="./assets//media//logos//favicon.ico">
